<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VecinosUY</string>
    <string name="titulo">Login de residentes</string>
    <string name="announcementsForm">Nuevo anuncio:</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="ingrese_codigo_de_activacion">Ingrese el codigo de activacion</string>
    <string name="continuar">Continuar</string>
    <string name="nuevo">Nuevo Juego</string>
    <string name="acerca_de">Acerca De</string>
    <string name="entrar">Entrar</string>
    <string name="annauncement">"Anuncios"</string>
    <string name="meeting">"Reuniones"</string>
    <string name="vote">"Votaciones"</string>
    <string name="reserve">"Reserva de Servicios"</string>
    <string name="agenda">"Agenda de Contactos"</string>
    <string name="vecinosUySessionToken">vecinosUySessionToken</string>
    <string name="serverAddr">http://104.155.174.201:45455/api/</string>
    <string name="title_activity_announcement">AnnouncementActivity</string>
    <string name="title_activity_to_delete">toDeleteActivity</string>
    <string name="title_activity_borrar">BORRARActivity</string>
    <string name="facebook_app_id">1793451820969927</string>
    <string name="connError">No disponible sin conn</string>
</resources>
