<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/fondo" android:layout_height="fill_parent"
    android:layout_width="fill_parent" android:padding="30dip"
    android:orientation="horizontal">
    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:layout_gravity="center">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="25dip"
            android:textSize="24.5sp"  android:text="@string/titulo" />
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vecinos_uy"
            />
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="25dip"
            android:textSize="24.5sp" android:text="@string/bienvenido" />
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="25dip"
            android:textSize="24.5sp" android:text="@string/ingrese_codigo_de_activacion" />
        <EditText

            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
        />
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="25dip"
            android:textSize="24.5sp" android:text="@string/entrar" />
    </LinearLayout>
</LinearLayout>