<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/fondo" android:layout_height="fill_parent"
    android:layout_width="fill_parent" android:padding="30dip"
    android:orientation="horizontal">
    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:layout_gravity="center">
        <TextView android:id="@+id/helloUser"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="24.5sp"  android:text="Hola usuario" />
<!--        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vecinos_uy"
            />-->
        <Button android:id="@+id/announcementsBtn" android:layout_height="wrap_content" android:layout_width="300dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="18.0sp" android:text="@string/annauncement"
            android:background="#000066"
            android:drawableLeft="@drawable/announcements"
            android:textColor="@android:color/white" />
        <Button android:id="@+id/accountStateBtn" android:layout_height="wrap_content" android:layout_width="300dp"
            android:drawableLeft="@drawable/account_statement"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="18.0sp" android:text="Estados de cuenta"
            android:background="#000066"
            android:textColor="@android:color/white"/>
        <Button android:id="@+id/mtngsBtn" android:layout_height="wrap_content" android:layout_width="300dp"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="18.0sp" android:text="@string/meeting"
            android:background="#000066"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/meeting"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"/>
        <Button android:id="@+id/voteBtn" android:layout_height="wrap_content" android:layout_width="300dp"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="18.0sp" android:text="@string/vote"
            android:background="#000066"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/vote"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"/>
        <Button android:id="@+id/reserveBtn" android:layout_height="wrap_content" android:layout_width="300dp"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="18.0sp" android:text="@string/reserve"
            android:background="#000066"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/bookings"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            />
        <Button android:id="@+id/agentaBtn" android:layout_height="wrap_content" android:layout_width="300dp"
            android:layout_gravity="center" android:layout_marginBottom="15dip"
            android:textSize="18.0sp" android:text="@string/agenda"
            android:background="#000066"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/contacts"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>